--- a/Website/people.html
+++ b/Website/people.html
@@ -7,7 +7,7 @@
 
 </body>
 
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css"/>
@@ -16,13 +16,13 @@
 
 <body>
 <ul id="navigation">
-  <li><a href="https://github.com/katarinatikka-cloud/conceptualising-an-algorithm_P1/blob/main/Website/index.html">Homepage</a>
+  <li><a href="index.html">Homepage</a>
 </li>
-  <li><a href="https://github.com/katarinatikka-cloud/conceptualising-an-algorithm_P1/blob/main/Website/dataset.html">Dataset</a>
+  <li><a href="dataset.html">Dataset</a>
 </li>
-  <li><a href="https://github.com/katarinatikka-cloud/conceptualising-an-algorithm_P1/blob/main/Website/algorithm.html">Algorithm</a>
+  <li><a href="algorithm.html">Algorithm</a>
 </li>
-  <li><a href="https://github.com/katarinatikka-cloud/conceptualising-an-algorithm_P1/blob/main/Website/people.html">People</a>
+  <li><a href="people.html">People</a>
 </li>
 
 </ul>
